--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/fleet
-#spring.datasource.username=root
-#spring.datasource.password=toor
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.hibernate.ddl-auto = create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/fleet?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=toor
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto = create
